# hh

./: .dockerignore  compose.yml  crontab.sh  dockerfile  pyproject.toml
.github/workflows/: docker.yml
account/: admin.py  forms.py  models.py  notify.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_profile_city_alter_profile_language.py  0003_remove_profile_city_remove_profile_language_and_more.py  0004_alter_profile_subscription.py
account/templates/account/: login.html  profile.html  register.html
hh/: settings.py  urls.py
scraping/: admin.py  forms.py  models.py  scraper.py  serializers.py  views.py
scraping/migrations/: 0001_initial.py  0002_language_alter_city_options_alter_city_name_and_more.py  0003_alter_city_slug_alter_language_slug.py  0004_vacancy.py  0005_city_hh_id.py
scraping/templates/scraping/: home.html  list.html
templates/: base.html
