[tool.poetry]
name = "hh"
version = "0.1.0"
description = ""
authors = ["dvornick <dev@dvornick.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.2"
python-decouple = "^3.6"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
asyncio = "^3.4.3"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
scraper = "scraping.scraper:main"
notify = "account.notify:run"